<resources>
    <string name="app_name" translatable="false">1Food</string>
    <string name="salutation">What may I do for you?</string>
    <string name="qr">QR Scan</string>
    <string name="locations">Locations</string>
    <string name="reservation">Reservations</string>
    <string name="favorites">Favorites</string>
    <string name="todaypromo">Today\'s Promos</string>
    <string name="orderconfirmed">Your order is confirmed!</string>
    <string name="checkorderstatus">Check order status</string>
    <string name="usersettings">User Settings</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="italian">Italian</string>
    <string name="american">American</string>
    <string name="mexican">Mexican</string>
    <string name="empty">This section is empty :(</string>
    <string name="todo">TODO</string>
    <string name="setdate">Set Date</string>
    <string name="settime">Set Time</string>
    <string name="save">Save and Send</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_reservation_maps">ReservationMapsActivity</string>
    <string name="title_activity_tabbed_menu_reviews">TabbedMenuReviews</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>

    <!-- General ////////////////////////////////////////////////////////////////////////////////-->
    <string name="one_food_web_address" translatable="false">http://onefood.lamchinghang.com/</string>

    <!-- Firebase ////////////////////////////////////////////////////////////////////////////////-->
    <string name="firebase_database_users" translatable="false">Users</string>
    <string name="firebase_database_food_orders" translatable="false">Food Orders</string>
    <string name="firebase_database_food_order_notifications" translatable="false">Food Order Notifications</string>
    <string name="firebase_database_instance_users" translatable="false">https://onefood-255ff-default-rtdb.firebaseio.com/</string>
    <string name="firebase_database_reservations" translatable="false">Reservation</string>

    <!-- Main Activity /////////////////////////////////////////////////////////////////////-->
    <string name="main_activity_no_internet_connection">No Internet Connection</string>

    <!-- Main Menu Activity /////////////////////////////////////////////////////////////////////-->
    <string name="main_menu_activity_text_hello">Hello,</string>

    <!-- Login Activity /////////////////////////////////////////////////////////////////////////-->
    <string name="login_activity_title">Login to 1Food</string>
    <string name="login_activity_hint_email_address">Email Address</string>
    <string name="login_activity_hint_password">Password</string>
    <string name="login_activity_button_login">Login</string>
    <string name="login_activity_textview_register">Register</string>
    <string name="login_activity_textview_reset_password">Forgot Password?</string>
    <string name="login_activity_textview_anonymous_user">Anonymous User</string>
    <string name="login_activity_error_empty_email_address">The email address cannot be empty</string>
    <string name="login_activity_error_invalid_email_address">This email address is invalid</string>
    <string name="login_activity_error_invalid_password">The password should be at least 6 characters</string>
    <string name="login_activity_error_empty_first_name">The first name cannot be empty</string>
    <string name="login_activity_error_empty_restaurant_name">The restaurant name cannot be empty</string>
    <string name="login_activity_toast_succeed_login_user_account">Welcome</string>
    <string name="login_activity_toast_fail_login_user_account">Failed to login</string>
    <string name="login_activity_toast_succeed_login_anonymous_account">Welcome</string>
    <string name="login_activity_toast_fail_login_anonymous_account">Failed to login</string>

    <!-- Who Activity ///////////////////////////////////////////////////////////////////////////-->
    <string name="who_activity_title">Who are you?</string>
    <string name="who_activity_button_customer">Customer</string>
    <string name="who_activity_button_restaurant_manager">Restaurant Manager</string>

    <!-- Customer Register Activity /////////////////////////////////////////////////////////////-->
    <string name="customer_register_activity_title">Enter your details</string>
    <string name="customer_register_activity_hint_first_name">First Name</string>
    <string name="customer_register_activity_hint_last_name">Last Name</string>
    <string name="customer_register_activity_button_submit">Submit</string>
    <string name="customer_register_activity_toast_succeed_create_customer_account">Your account has been created</string>
    <string name="customer_register_activity_toast_fail_create_customer_account">Failed to create an account</string>

    <!-- Restaurant Manager Register Activity ///////////////////////////////////////////////////-->
    <string name="restaurant_manager_register_activity_title">Enter your details</string>
    <string name="restaurant_manager_register_activity_hint_restaurant_name">Restaurant Name</string>
    <string name="restaurant_manager_register_activity_hint_email_address">Email Address</string>
    <string name="restaurant_manager_register_activity_hint_password">Password</string>
    <string name="restaurant_manager_register_activity_button_submit">Submit</string>
    <string name="restaurant_manager_register_activity_toast_succeed_create_restaurant_manager_account">Your account has been created</string>
    <string name="restaurant_manager_register_activity_toast_fail_create_restaurant_manager_customer_account">Failed to create an account</string>

    <!-- Reset Password Activity ////////////////////////////////////////////////////////////////-->
    <string name="reset_password_activity_title">Please enter your email to search for your account</string>
    <string name="reset_password_activity_edittext_email_address">Email Address</string>
    <string name="reset_password_activity_button_reset_password">Reset Password</string>
    <string name="reset_password_activity_toast_empty_email_address">The email address cannot be empty</string>
    <string name="reset_password_activity_toast_succeed_send_password_reset_email">The password reset email has been sent</string>
    <string name="reset_password_activity_toast_fail_send_password_reset_email">Unable to send the password reset email</string>

    <!-- Food Orders Activity ///////////////////////////////////////////////////////////////////-->
    <string name="food_orders_activity_action_bar_new_oder">New Order</string>
    <string name="food_orders_activity_text_empty_food_order_list">The food order list is empty</string>
    <string name="food_orders_activity_text_restaurant_pager_system">Restaurant Pager System</string>

    <!-- New Order Activity /////////////////////////////////////////////////////////////////////-->
    <string name="new_order_activity_text_remark">Remarks</string>
    <string name="new_order_activity_button_submit">Submit</string>
    <string name="new_order_activity_toast_success">The request is sent</string>
    <string name="new_order_activity_toast_failure">Unable to send the request</string>

    <!-- Food Order Activity ////////////////////////////////////////////////////////////////////-->
    <string name="food_order_activity_text_order">Order</string>
    <string name="food_order_activity_text_order_time">Order Time:</string>
    <string name="food_order_activity_button_done">Done</string>
    <string name="food_order_activity_toast_success">Notification is sent</string>
    <string name="food_order_activity_toast_failure">Unable to send the notification</string>
    <string name="food_order_activity_toast_delete">The food order is deleted</string>
    <string name="food_order_activity_action_bar_delete_oder">Delete Order</string>
    <string name="food_order_activity_toast_notification">The notification is sent</string>

    <!-- User Profile Activity ///////////////////////////////////////////////////////////////////-->
    <string name="user_profile_activity_button_logout">Logout</string>
    <string name="user_profile_activity_button_save">Save</string>
    <string name="user_profile_activity_text_first_name">First Name</string>
    <string name="user_profile_activity_text_last_name">Last Name</string>
    <string name="user_profile_activity_text_restaurant_name">Restaurant Name</string>
    <string name="user_profile_activity_text_email_address">Email Address</string>
    <string name="user_profile_activity_text_home_address">Home Address</string>
    <string name="user_profile_activity_toast_succeed_save">Saved</string>
    <string name="user_profile_activity_toast_fail_save">Unable to save</string>

    <!-- QR Scan Activity ///////////////////////////////////////////////////////////////////-->
    <string name="qr_scan_activity_toast_repeat">You have registered for this order</string>
    <string name="qr_scan_activity_notification_marking_food">Your food is being prepared</string>
    <string name="qr_scan_activity_notification_food_ready">Your food is ready</string>
    <string name="qr_scan_activity_notification_title">Restaurant Pager System</string>
    <string name="qr_scan_activity_toast_invalid">Invalid QR Code, Tap to Rescan</string>

    <!-- ////////////////////////////////////////////////////////////////////////////////////////-->
    <string name="favourites">favourites</string>
    <string name="no_favourites_added_yet">No favourites added yet!</string>
    <string name="Favourites">Favourites</string>
    <string name="nearest">Nearest</string>
    <string name="Nearest">Nearest</string>
    <string name="Clear">clear</string>
    <string-array name="languages">
        <item>English</item>
        <item>Chinese</item>
        <item>French</item>
    </string-array>

    <string-array name="cuisines">
        <item>Indian</item>
        <item>Chinese</item>
        <item>Nepali</item>
        <item>American</item>
        <item>Italian</item>
        <item>Mexican</item>
        <item>Persian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Thai</item>
        <item>Indonesian</item>
        <item>Vietnamese</item>
        <item>Greek</item>
        <item>Malaysian</item>
        <item>Filipino</item>
        <item>Turkish</item>
        <item>Peruvian</item>
        <item>Nigerian</item>
        <item>Spanish</item>
        <item>Jamaican</item>
        <item>New User</item>
    </string-array>

</resources>