<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.fragments.RestaurantManagerRegisterFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_manager_register_activity_title"
        android:textColor="@color/black"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/restaurantNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/restaurant_manager_register_activity_hint_restaurant_name"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/restaurant_manager_register_activity_hint_email_address"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/restaurant_manager_register_activity_hint_password"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_manager_register_activity_button_submit"
        android:layout_marginTop="50dp"/>

</LinearLayout>