<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.fragments.WhoFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_activity_title"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/customerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/who_activity_button_customer"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/restaurantManagerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/who_activity_button_restaurant_manager"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

</LinearLayout>