<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainMenu.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="143dp"
                android:maxWidth="143dp"
                android:src="@drawable/user_big"
                android:layout_gravity="center"
                android:layout_weight="5"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_activity_button_save"
                android:layout_gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_text_first_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/lastNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_text_last_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/restaurantNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_text_restaurant_name"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/restaurantNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/emailAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_text_email_address"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/homeAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_text_home_address"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/homeAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/usersettings"
            android:textColor="#3E4462"
            android:textSize="24dp"
            android:textStyle="bold"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="196dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/myLanguage"
                android:layout_width="145dp"
                android:layout_height="29dp"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_settings_24" />

        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_profile_activity_button_logout"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>