<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".RestaurantsList.RestaurantsListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/recommended_for_you"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingStart="9dp"
            android:paddingEnd="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/italianRecommendation"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/food_recommendation1" />

                <TextView
                    android:id="@+id/top1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/italian"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mexicanRecommendation"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/food_recommendation2" />

                <TextView
                    android:id="@+id/top2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mexican"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/americanRecommendation"
                    android:layout_width="wrap_content"
                    android:layout_height="89dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@drawable/food_recommendation3" />

                <TextView
                    android:id="@+id/top3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/american"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:orientation="horizontal">
            <android.widget.SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                app:queryBackground="@color/black"
                android:layout_weight="2"
                android:id="@+id/searchVieww"
                android:queryHint="Restaurants or Cuisines"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/nearestBtn"
                android:layout_marginEnd="7dp"
                android:text="@string/nearest"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurantsRecycler"
            android:layout_width="match_parent"
            android:layout_height="472dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical" />


    </LinearLayout>
</ScrollView>